# jiuling-uwb-x1-pro-sma

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.cmake/: gccarmnoneeabi.cmake  headersandsources.cmake  stm32.cmake
APPS/: app_poll.h  apps.h
BRDCFG/: brdcfg.h
DW1000/decadriver/: deca_device.c  deca_device_api.h  deca_param_types.h  deca_params_init.c  deca_regs.h  deca_version.h
DW1000/examples/ex_01a_simple_tx/: ex_01a_main.c
DW1000/examples/ex_01b_tx_sleep/: ex_01b_main.c
DW1000/examples/ex_01c_tx_sleep_auto/: ex_01c_main.c
DW1000/examples/ex_01d_tx_timed_sleep/: ex_01d_main.c
DW1000/examples/ex_01e_tx_with_cca/: ex_01e_tx_with_cca.c
DW1000/examples/ex_02a_simple_rx/: ex_02a_main.c
DW1000/examples/ex_02b_rx_preamble_64/: ex_02b_main.c
DW1000/examples/ex_02c_rx_diagnostics/: ex_02c_main.c
DW1000/examples/ex_02d_rx_sniff/: ex_02d_main.c
DW1000/examples/ex_02e_rx_dbl_buff/: ex_02e_main.c
DW1000/examples/ex_02f_rx_with_crystal_trim/: ex_02f_rx_with_xtal_trim.c
DW1000/examples/ex_03a_tx_wait_resp/: ex_03a_main.c
DW1000/examples/ex_03b_rx_send_resp/: ex_03b_main.c
DW1000/examples/ex_03c_tx_wait_resp_leds/: ex_03c_main.c
DW1000/examples/ex_03d_tx_wait_resp_interrupts/: ex_03d_main.c
DW1000/examples/ex_04a_cont_wave/: ex_04a_main.c
DW1000/examples/ex_04b_cont_frame/: ex_04b_main.c
DW1000/examples/ex_05a_ds_twr_init/: ex_05a_main.c
DW1000/examples/ex_05b_ds_twr_resp/: ex_05b_main.c
DW1000/platform/: deca_mutex.c  deca_range_tables.c  deca_sleep.c  deca_spi.c  port.c  port.h  sleep.h
STM32F103C8TX/: .cproject  .mxproject  .project  CMakeLists.txt  STM32F103C8TX.ioc
STM32F103C8TX/Core/Inc/: main.h  spi.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
STM32F103C8TX/Core/Src/: dma.c  gpio.c  main.c  spi.c  stm32f1xx_it.c  tim.c
(+7 files in other folders)
